<resources>
    <string name="app_name">Gotham City</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">Batman will help you to find your way!</string>
    <string name="powered_by">Powered By Jhonny Sierra</string>

    <string name="forever_batman">Batman Forever</string>
    <string name="app_batman">Batman App</string>
    <string name="login_text">Login to gotham city</string>
    <string name="login_txt">Go to gotham</string>
    <string name="not_account">You do not have an account?</string>
    <string name="register_now">Register now!!</string>
</resources>