<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".common.presentation.activities.SplashScreen"
        android:background="@color/black">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_batman"
            android:textColor="@color/colorPrimary"
            android:layout_margin="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="1"
            android:fontFamily="@font/batmfa__"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/app_batman"/>
    <ImageView
            android:src="@drawable/batman_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgBatman_01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/app_batman"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/forever_batman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/batman_forever"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/batmfa__"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            android:layout_marginBottom="8dp"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline3" app:layout_constraintGuide_begin="126dp"
                                                android:orientation="horizontal"/>
    <TextView

            android:text="@string/powered_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/powered"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/batmfa__"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>