<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".session.presentation.activities.LoginActivity"
        android:background="@color/black">

    <TextView
            android:text="@string/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/batmfa__"
            android:textSize="24sp" app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
            android:layout_marginBottom="16dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="246dp" app:srcCompat="@drawable/city_goham" android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTextPersonName"
            android:background="@drawable/txt_batman_style_yellow"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            android:layout_marginBottom="8dp"
            android:hint="Email/Alias.."
            android:textColorHint="@color/color_hint"
            android:fontFamily="@font/batmfa__" android:textColor="@color/white"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextTextPassword"
            android:background="@drawable/txt_batman_style_yellow"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
            app:layout_constraintTop_toTopOf="@+id/guideline7"
            android:hint="Password..."
            android:textColorHint="@color/color_hint"
            android:fontFamily="@font/batmfa__"
            android:layout_marginTop="8dp" android:textColor="@color/white"/>
    <Button
            android:text="@string/login_txt"
            android:layout_width="250dp"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/batmfa__"
            android:textColor="@color/black"
            android:background="@drawable/btn_batman_style_yellow" android:layout_marginTop="8dp"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.45"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline4" app:layout_constraintGuide_begin="411dp"
                                                android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline7"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.37"/>
    <TextView
            android:text="@string/not_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/batmfa__" android:textSize="10sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageView" app:layout_constraintTop_toTopOf="@+id/guideline4"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txtNewAccount"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/batmfa__" app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/guideline4" app:layout_constraintBottom_toTopOf="@+id/imageView"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="12sp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/murcielago_01" android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/textView"/>
</androidx.constraintlayout.widget.ConstraintLayout>